--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,6 +1,6 @@
 jdbc.driver=com.mysql.jdbc.Driver
 #数据库地址
-jdbc.url=jdbc:mysql://cdb-2ui8i6g0.bj.tencentcdb.com:10002/hejianjie?useUnicode=true&characterEncoding=utf8&useSSL=false
+jdbc.url=jdbc:mysql://cdb-2ui8i6g0.bj.tencentcdb.com:10002/score?useUnicode=true&characterEncoding=utf8&useSSL=false
 #用户名
 jdbc.username=root
 #密码
